--- a/portal/core/login/styleIndex.css
+++ b/portal/core/login/styleIndex.css
@@ -16,6 +16,7 @@ nav .brand-logo{
     padding: 0 20px;
 }
 .content{
+	background-color:black;
     height:100%;
     overflow:hidden;
     position:relative; 
